# mcc

./: .gitignore  LICENSE  README.md
mcc-server/: pyproject.toml
mcc-server/mcc/mcc/: asgi.py  settings.py  urls.py  wsgi.py
mcc-server/mcc/packs/: admin.py  models.py
mcc-server/mcc/packs/migrations/: 0001_initial.py
